# makapix

./: .env.example  .gitattributes  .github-apps-needed.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARTIST_DASHBOARD.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT-SETUP.md  IMPLEMENTATION_STATUS.md  LICENSE  MQTT_IMPLEMENTATION_SUMMARY.md  Makefile  NOTICE  P3A_VIEW_EVENT_IMPLEMENTATION.md  PASSWORD_RATE_LIMIT_UPDATE.md  PASTE-TO-VPS-AI.txt  PRIORITY_1_IMPLEMENTATION_GUIDE.md  PRODUCTION-ARCHITECTURE.md  PRODUCTION-DEPLOYMENT-COMPLETE.md  PROMPT-FOR-VPS-AI.md  QUICK-START.md  README-DEV-ENVIRONMENTS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES_SUMMARY.md  SECURITY_README.md  SECURITY_SETUP_GUIDE.md  SESSION_FLOW_DIAGRAMS.md  SESSION_INVESTIGATION_README.md  SESSION_ISSUES_INVESTIGATION.md  SESSION_ISSUES_SUMMARY.md  SESSION_MANAGEMENT_ANALYSIS.md  SESSION_MANAGEMENT_SANITY_CHECK_REPORT.md  SETUP-SUMMARY.md  (+29 more)
api/: .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  openapi.json  pyproject.toml
api/alembic/: env.py
api/app/: .gitignore  __init__.py  auth.py  avatar_vault.py  blog_vault.py  cache.py  constants.py  d_cloud_sync.py  db.py  deps.py  errors.py  github.py  main.py  middleware.py  models.py  mqtt.py  observability.py  pagination.py  schemas.py  seed.py  settings.py  sqids_config.py  tasks.py  validation.py  vault.py  vault_serving.py  websocket_manager.py
api/scripts/: backfill_amp_metadata.py  backfill_github_avatars.py  backfill_vault_urls.py  export_openapi.py  reshard_vault.py  run_tests.py
api/tests/: conftest.py  test_account_deletion.py  test_admin_pulse.py  test_admin_recent_reactions.py  test_admin_vault_sharding_stats.py  test_animation_durations.py  test_apple_signin.py  test_art_url_guard.py  test_artist_dashboard.py  test_auth.py  test_avatar_from_post.py  test_avatar_upload_safety.py  test_avatar_vault.py  test_ban_enforcement.py  test_blocks.py  test_bot_detection.py  test_ca_keypair_guard.py  test_cleanup_deleted_posts.py  test_cleanup_expired_bdrs.py  test_cleanup_retired_artwork.py  test_client_ip.py  test_comment_author_sqid.py  test_comment_mod_deletion.py  test_config.py  test_content_visibility.py  test_download_and_comment_pii.py  test_download_stats_rollup.py  test_error_envelope.py  test_github_avatar_mirror.py  test_handles.py  test_harness_safety.py  test_health.py  test_me_capabilities.py  test_mkpx.py  test_mod_hashtags.py  test_mqtt_player_requests.py  test_mqtt_post_notifications.py  test_mqtt_publisher.py  test_oauth_native.py  (+34 more)
(+723 files in other folders)
